--- a/src/eval_sockdef.ipynb
+++ b/src/eval_sockdef.ipynb
@@ -37,7 +37,7 @@
    "outputs": [],
    "source": [
     "alg_list = [\"fraudar\", \"rsd\", \"rev2\"][:3]\n",
-    "data_list = [\"alpha\", \"otc\", \"amazon\", \"epinions\"][:3]\n",
+    "data_list = [\"alpha\", \"otc\", \"amazon\", \"epinions\"][3:]\n",
     "budget_list = [100.0, 200.0, 300.0, 400.0]\n",
     "frac_list = [0.0, 0.2, 0.4, 0.6, 0.8]"
    ]
@@ -101,9 +101,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "../res/sockfarm_attack/fraudar-epinions/400.0.pkl\n",
+      "../res/sockfarm_attack/rsd-epinions/200.0.pkl\n"
+     ]
+    }
+   ],
    "source": [
     "attack_res = {\n",
     "    (d, a, b): get_results(data_name=d, alg=a, attack_name=\"sockfarm_attack\", budget=b)\n",
@@ -114,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,19 +132,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_sockfarm_alg_data_met(df_met, data=\"alpha\", met=\"f1\"):\n",
-    "    rdf = df_met.reset_index().pivot(index=[\"data\", \"algo\", \"metrics\"], columns=[\"budget\"]).loc[(data, slice(None), met)].droplevel([0, 2], axis=0)\n",
+    "    rdf = df_met.reset_index().pivot(index=[\"data\", \"algo\", \"metrics\"], columns=[\"budget\"]).loc[(data, slice(None), met)]#.droplevel([0, 2], axis=0)\n",
     "    rdf.index = [f\"sockfarm-{i}\" for i in rdf.index]\n",
     "    return rdf"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -182,65 +191,65 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>sockfarm-fraudar</th>\n",
-       "      <td>0.394338</td>\n",
-       "      <td>0.315671</td>\n",
-       "      <td>0.264594</td>\n",
-       "      <td>0.227757</td>\n",
-       "      <td>0.062447</td>\n",
-       "      <td>0.041636</td>\n",
-       "      <td>0.031231</td>\n",
-       "      <td>0.024987</td>\n",
-       "      <td>0.489287</td>\n",
-       "      <td>0.339801</td>\n",
-       "      <td>0.286420</td>\n",
-       "      <td>0.247854</td>\n",
+       "      <td>0.034042</td>\n",
+       "      <td>0.033247</td>\n",
+       "      <td>0.03249</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.128978</td>\n",
+       "      <td>0.111106</td>\n",
+       "      <td>0.098030</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.127082</td>\n",
+       "      <td>0.148773</td>\n",
+       "      <td>0.169365</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>sockfarm-rev2</th>\n",
-       "      <td>0.391247</td>\n",
-       "      <td>0.315671</td>\n",
-       "      <td>0.264594</td>\n",
-       "      <td>0.227757</td>\n",
-       "      <td>0.219717</td>\n",
-       "      <td>0.152019</td>\n",
-       "      <td>0.116221</td>\n",
-       "      <td>0.094073</td>\n",
-       "      <td>0.716412</td>\n",
-       "      <td>0.792877</td>\n",
-       "      <td>0.836853</td>\n",
-       "      <td>0.865422</td>\n",
+       "      <td>0.034042</td>\n",
+       "      <td>0.033247</td>\n",
+       "      <td>0.03249</td>\n",
+       "      <td>0.03177</td>\n",
+       "      <td>0.151528</td>\n",
+       "      <td>0.130756</td>\n",
+       "      <td>0.115484</td>\n",
+       "      <td>0.103704</td>\n",
+       "      <td>0.133940</td>\n",
+       "      <td>0.118573</td>\n",
+       "      <td>0.106570</td>\n",
+       "      <td>0.096900</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>sockfarm-rsd</th>\n",
-       "      <td>0.391247</td>\n",
-       "      <td>0.315671</td>\n",
-       "      <td>0.264594</td>\n",
-       "      <td>0.227757</td>\n",
-       "      <td>0.194311</td>\n",
-       "      <td>0.133320</td>\n",
-       "      <td>0.101477</td>\n",
-       "      <td>0.081915</td>\n",
-       "      <td>0.489287</td>\n",
-       "      <td>0.339801</td>\n",
-       "      <td>0.286420</td>\n",
-       "      <td>0.247854</td>\n",
+       "      <td>0.034042</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.03249</td>\n",
+       "      <td>0.03177</td>\n",
+       "      <td>0.296232</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.251579</td>\n",
+       "      <td>0.234281</td>\n",
+       "      <td>0.137887</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.111858</td>\n",
+       "      <td>0.102458</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                   fraudar                                     rsd            \\\n",
-       "budget               100.0     200.0     300.0     400.0     100.0     200.0   \n",
-       "sockfarm-fraudar  0.394338  0.315671  0.264594  0.227757  0.062447  0.041636   \n",
-       "sockfarm-rev2     0.391247  0.315671  0.264594  0.227757  0.219717  0.152019   \n",
-       "sockfarm-rsd      0.391247  0.315671  0.264594  0.227757  0.194311  0.133320   \n",
+       "                   fraudar                                   rsd            \\\n",
+       "budget               100.0     200.0    300.0    400.0     100.0     200.0   \n",
+       "sockfarm-fraudar  0.034042  0.033247  0.03249      NaN  0.128978  0.111106   \n",
+       "sockfarm-rev2     0.034042  0.033247  0.03249  0.03177  0.151528  0.130756   \n",
+       "sockfarm-rsd      0.034042       NaN  0.03249  0.03177  0.296232       NaN   \n",
        "\n",
        "                                          rev2                                \n",
        "budget               300.0     400.0     100.0     200.0     300.0     400.0  \n",
-       "sockfarm-fraudar  0.031231  0.024987  0.489287  0.339801  0.286420  0.247854  \n",
-       "sockfarm-rev2     0.116221  0.094073  0.716412  0.792877  0.836853  0.865422  \n",
-       "sockfarm-rsd      0.101477  0.081915  0.489287  0.339801  0.286420  0.247854  "
+       "sockfarm-fraudar  0.098030       NaN  0.127082  0.148773  0.169365       NaN  \n",
+       "sockfarm-rev2     0.115484  0.103704  0.133940  0.118573  0.106570  0.096900  \n",
+       "sockfarm-rsd      0.251579  0.234281  0.137887       NaN  0.111858  0.102458  "
       ]
      },
      "metadata": {},
@@ -290,48 +299,48 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>sockfarm-fraudar</th>\n",
-       "      <td>0.425905</td>\n",
-       "      <td>0.278097</td>\n",
-       "      <td>0.207575</td>\n",
-       "      <td>0.165588</td>\n",
-       "      <td>0.032231</td>\n",
-       "      <td>0.021261</td>\n",
-       "      <td>0.015863</td>\n",
-       "      <td>0.012652</td>\n",
-       "      <td>0.597985</td>\n",
-       "      <td>0.310069</td>\n",
-       "      <td>0.231415</td>\n",
-       "      <td>0.184594</td>\n",
+       "      <td>0.151103</td>\n",
+       "      <td>0.125656</td>\n",
+       "      <td>0.107837</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.082389</td>\n",
+       "      <td>0.069672</td>\n",
+       "      <td>0.060551</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>sockfarm-rev2</th>\n",
-       "      <td>0.421247</td>\n",
-       "      <td>0.278097</td>\n",
-       "      <td>0.207575</td>\n",
-       "      <td>0.165588</td>\n",
-       "      <td>0.127371</td>\n",
-       "      <td>0.084005</td>\n",
-       "      <td>0.062673</td>\n",
-       "      <td>0.049982</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
+       "      <td>0.151103</td>\n",
+       "      <td>0.125656</td>\n",
+       "      <td>0.107837</td>\n",
+       "      <td>0.094599</td>\n",
+       "      <td>0.099181</td>\n",
+       "      <td>0.083724</td>\n",
+       "      <td>0.072665</td>\n",
+       "      <td>0.064306</td>\n",
+       "      <td>0.101554</td>\n",
+       "      <td>0.085169</td>\n",
+       "      <td>0.073561</td>\n",
+       "      <td>0.064856</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>sockfarm-rsd</th>\n",
-       "      <td>0.421247</td>\n",
-       "      <td>0.278097</td>\n",
-       "      <td>0.207575</td>\n",
-       "      <td>0.165588</td>\n",
-       "      <td>0.109645</td>\n",
-       "      <td>0.072313</td>\n",
-       "      <td>0.053949</td>\n",
-       "      <td>0.043024</td>\n",
-       "      <td>0.597985</td>\n",
-       "      <td>0.310069</td>\n",
-       "      <td>0.231415</td>\n",
-       "      <td>0.184594</td>\n",
+       "      <td>0.151103</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.107837</td>\n",
+       "      <td>0.094599</td>\n",
+       "      <td>0.335521</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.242730</td>\n",
+       "      <td>0.213911</td>\n",
+       "      <td>0.120821</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.087605</td>\n",
+       "      <td>0.077262</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -340,15 +349,15 @@
       "text/plain": [
        "                   fraudar                                     rsd            \\\n",
        "budget               100.0     200.0     300.0     400.0     100.0     200.0   \n",
-       "sockfarm-fraudar  0.425905  0.278097  0.207575  0.165588  0.032231  0.021261   \n",
-       "sockfarm-rev2     0.421247  0.278097  0.207575  0.165588  0.127371  0.084005   \n",
-       "sockfarm-rsd      0.421247  0.278097  0.207575  0.165588  0.109645  0.072313   \n",
+       "sockfarm-fraudar  0.151103  0.125656  0.107837       NaN  0.082389  0.069672   \n",
+       "sockfarm-rev2     0.151103  0.125656  0.107837  0.094599  0.099181  0.083724   \n",
+       "sockfarm-rsd      0.151103       NaN  0.107837  0.094599  0.335521       NaN   \n",
        "\n",
        "                                          rev2                                \n",
        "budget               300.0     400.0     100.0     200.0     300.0     400.0  \n",
-       "sockfarm-fraudar  0.015863  0.012652  0.597985  0.310069  0.231415  0.184594  \n",
-       "sockfarm-rev2     0.062673  0.049982  1.000000  1.000000  1.000000  1.000000  \n",
-       "sockfarm-rsd      0.053949  0.043024  0.597985  0.310069  0.231415  0.184594  "
+       "sockfarm-fraudar  0.060551       NaN  1.000000  1.000000  1.000000       NaN  \n",
+       "sockfarm-rev2     0.072665  0.064306  0.101554  0.085169  0.073561  0.064856  \n",
+       "sockfarm-rsd      0.242730  0.213911  0.120821       NaN  0.087605  0.077262  "
       ]
      },
      "metadata": {},
@@ -398,65 +407,65 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>sockfarm-fraudar</th>\n",
-       "      <td>0.367617</td>\n",
-       "      <td>0.365678</td>\n",
-       "      <td>0.365678</td>\n",
-       "      <td>0.365678</td>\n",
-       "      <td>1.0000</td>\n",
-       "      <td>1.0000</td>\n",
-       "      <td>1.0000</td>\n",
-       "      <td>1.0000</td>\n",
-       "      <td>0.420354</td>\n",
-       "      <td>0.376195</td>\n",
-       "      <td>0.376195</td>\n",
-       "      <td>0.377742</td>\n",
+       "      <td>0.019199</td>\n",
+       "      <td>0.019199</td>\n",
+       "      <td>0.019199</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.465989</td>\n",
+       "      <td>0.465989</td>\n",
+       "      <td>0.465989</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.067867</td>\n",
+       "      <td>0.080366</td>\n",
+       "      <td>0.092519</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>sockfarm-rev2</th>\n",
-       "      <td>0.365678</td>\n",
-       "      <td>0.365678</td>\n",
-       "      <td>0.365678</td>\n",
-       "      <td>0.365678</td>\n",
-       "      <td>0.8163</td>\n",
-       "      <td>0.8163</td>\n",
-       "      <td>0.8163</td>\n",
-       "      <td>0.8163</td>\n",
-       "      <td>0.558191</td>\n",
-       "      <td>0.656888</td>\n",
-       "      <td>0.719521</td>\n",
-       "      <td>0.762810</td>\n",
+       "      <td>0.019199</td>\n",
+       "      <td>0.019199</td>\n",
+       "      <td>0.019199</td>\n",
+       "      <td>0.019199</td>\n",
+       "      <td>0.462839</td>\n",
+       "      <td>0.462839</td>\n",
+       "      <td>0.462839</td>\n",
+       "      <td>0.462839</td>\n",
+       "      <td>0.200786</td>\n",
+       "      <td>0.200786</td>\n",
+       "      <td>0.200786</td>\n",
+       "      <td>0.200786</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>sockfarm-rsd</th>\n",
-       "      <td>0.365678</td>\n",
-       "      <td>0.365678</td>\n",
-       "      <td>0.365678</td>\n",
-       "      <td>0.365678</td>\n",
-       "      <td>0.8671</td>\n",
-       "      <td>0.8671</td>\n",
-       "      <td>0.8671</td>\n",
-       "      <td>0.8671</td>\n",
-       "      <td>0.420354</td>\n",
-       "      <td>0.376195</td>\n",
-       "      <td>0.376195</td>\n",
-       "      <td>0.377742</td>\n",
+       "      <td>0.019199</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.019199</td>\n",
+       "      <td>0.019199</td>\n",
+       "      <td>0.267019</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.267019</td>\n",
+       "      <td>0.267019</td>\n",
+       "      <td>0.167075</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.167075</td>\n",
+       "      <td>0.167075</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                   fraudar                                   rsd          \\\n",
-       "budget               100.0     200.0     300.0     400.0   100.0   200.0   \n",
-       "sockfarm-fraudar  0.367617  0.365678  0.365678  0.365678  1.0000  1.0000   \n",
-       "sockfarm-rev2     0.365678  0.365678  0.365678  0.365678  0.8163  0.8163   \n",
-       "sockfarm-rsd      0.365678  0.365678  0.365678  0.365678  0.8671  0.8671   \n",
+       "                   fraudar                                     rsd            \\\n",
+       "budget               100.0     200.0     300.0     400.0     100.0     200.0   \n",
+       "sockfarm-fraudar  0.019199  0.019199  0.019199       NaN  0.465989  0.465989   \n",
+       "sockfarm-rev2     0.019199  0.019199  0.019199  0.019199  0.462839  0.462839   \n",
+       "sockfarm-rsd      0.019199       NaN  0.019199  0.019199  0.267019       NaN   \n",
        "\n",
-       "                                      rev2                                \n",
-       "budget             300.0   400.0     100.0     200.0     300.0     400.0  \n",
-       "sockfarm-fraudar  1.0000  1.0000  0.420354  0.376195  0.376195  0.377742  \n",
-       "sockfarm-rev2     0.8163  0.8163  0.558191  0.656888  0.719521  0.762810  \n",
-       "sockfarm-rsd      0.8671  0.8671  0.420354  0.376195  0.376195  0.377742  "
+       "                                          rev2                                \n",
+       "budget               300.0     400.0     100.0     200.0     300.0     400.0  \n",
+       "sockfarm-fraudar  0.465989       NaN  0.067867  0.080366  0.092519       NaN  \n",
+       "sockfarm-rev2     0.462839  0.462839  0.200786  0.200786  0.200786  0.200786  \n",
+       "sockfarm-rsd      0.267019  0.267019  0.167075       NaN  0.167075  0.167075  "
       ]
      },
      "metadata": {},
@@ -465,9 +474,9 @@
    ],
    "source": [
     "def_dict = {\n",
-    "    \"fraudar\": {\"fraudar\": 0.9, \"rsd\": 1.96, \"rev2\": 0.026,}, # rev2=0.026\n",
-    "    \"rsd\": {\"fraudar\": 0.5, \"rsd\": 0.6, \"rev2\": 0.026,},\n",
-    "    \"rev2\": {\"fraudar\": 0.9, \"rsd\": 1.1, \"rev2\": 0.00001,},\n",
+    "    \"fraudar\": {\"fraudar\": 0.9, \"rsd\": 1.96, \"rev2\": 0.00,}, # rev2=0.026\n",
+    "    \"rsd\": {\"fraudar\": 0.5, \"rsd\": 0.6, \"rev2\": 0.09,},\n",
+    "    \"rev2\": {\"fraudar\": 0.9, \"rsd\": 1.92, \"rev2\": 0.5,},\n",
     "}\n",
     "\n",
     "\n",
@@ -480,7 +489,7 @@
     "df_met = df_met.mean(axis=1, level=0)\n",
     "# display(df_met)\n",
     "\n",
-    "dmet=\"alpha\"\n",
+    "dmet=\"epinions\"\n",
     "\n",
     "display(get_sockfarm_alg_data_met(df_met, data=dmet, met=\"f1\"))\n",
     "display(get_sockfarm_alg_data_met(df_met, data=dmet, met=\"recall\"))\n",
