--- a/src/eval_ilp.ipynb
+++ b/src/eval_ilp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,19 +84,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
-    "alg_list = [\"fraudar\", \"rsd\", \"rev2\"][:3]\n",
-    "data_list = [\"alpha\", \"otc\", \"amazon\", \"epinions\"][3:]\n",
+    "alg_list = [\"fraudar\", \"rsd\", \"rev2\", \"fbox\", \"sg\"][4:]\n",
+    "data_list = [\"alpha\", \"otc\", \"amazon\", \"epinions\"][:2]\n",
     "budget_list = [100.0, 200.0, 300.0, 400.0]\n",
     "frac_list = [0.0, 0.2, 0.4, 0.6, 0.8]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -154,114 +154,116 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th rowspan=\"11\" valign=\"top\">epinions</th>\n",
-       "      <th rowspan=\"5\" valign=\"top\">fraudar</th>\n",
+       "      <th rowspan=\"5\" valign=\"top\">alpha</th>\n",
+       "      <th rowspan=\"5\" valign=\"top\">sg</th>\n",
        "      <th rowspan=\"5\" valign=\"top\">100.0</th>\n",
        "      <th rowspan=\"3\" valign=\"top\">0.0</th>\n",
        "      <th>precision</th>\n",
-       "      <td>0.016245</td>\n",
-       "      <td>0.018277</td>\n",
-       "      <td>0.021121</td>\n",
-       "      <td>0.022312</td>\n",
+       "      <td>0.177778</td>\n",
+       "      <td>0.190476</td>\n",
+       "      <td>0.187500</td>\n",
+       "      <td>0.173913</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>recall</th>\n",
-       "      <td>0.168558</td>\n",
-       "      <td>0.168385</td>\n",
-       "      <td>0.202952</td>\n",
-       "      <td>0.235043</td>\n",
+       "      <td>0.210526</td>\n",
+       "      <td>0.197531</td>\n",
+       "      <td>0.200000</td>\n",
+       "      <td>0.173913</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>f1</th>\n",
-       "      <td>0.029634</td>\n",
-       "      <td>0.032974</td>\n",
-       "      <td>0.038261</td>\n",
-       "      <td>0.040756</td>\n",
+       "      <td>0.192771</td>\n",
+       "      <td>0.193939</td>\n",
+       "      <td>0.193548</td>\n",
+       "      <td>0.173913</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th rowspan=\"2\" valign=\"top\">0.2</th>\n",
        "      <th>precision</th>\n",
-       "      <td>0.016245</td>\n",
-       "      <td>0.018304</td>\n",
-       "      <td>0.021121</td>\n",
-       "      <td>0.022312</td>\n",
+       "      <td>0.179775</td>\n",
+       "      <td>0.180723</td>\n",
+       "      <td>0.187500</td>\n",
+       "      <td>0.161765</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>recall</th>\n",
-       "      <td>0.165342</td>\n",
-       "      <td>0.161716</td>\n",
-       "      <td>0.194346</td>\n",
-       "      <td>0.223577</td>\n",
+       "      <td>0.181818</td>\n",
+       "      <td>0.161290</td>\n",
+       "      <td>0.172414</td>\n",
+       "      <td>0.135802</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
        "      <th>...</th>\n",
        "      <th>...</th>\n",
        "      <th>...</th>\n",
+       "      <th>...</th>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th rowspan=\"5\" valign=\"top\">rev2</th>\n",
+       "      <th rowspan=\"5\" valign=\"top\">otc</th>\n",
+       "      <th rowspan=\"5\" valign=\"top\">sg</th>\n",
        "      <th rowspan=\"5\" valign=\"top\">400.0</th>\n",
        "      <th rowspan=\"2\" valign=\"top\">0.6</th>\n",
        "      <th>recall</th>\n",
-       "      <td>0.124836</td>\n",
-       "      <td>0.073563</td>\n",
-       "      <td>0.065060</td>\n",
-       "      <td>0.076720</td>\n",
+       "      <td>0.057915</td>\n",
+       "      <td>0.054688</td>\n",
+       "      <td>0.056225</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>f1</th>\n",
-       "      <td>0.155229</td>\n",
-       "      <td>0.115942</td>\n",
-       "      <td>0.100935</td>\n",
-       "      <td>0.112840</td>\n",
+       "      <td>0.091185</td>\n",
+       "      <td>0.088889</td>\n",
+       "      <td>0.093333</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th rowspan=\"3\" valign=\"top\">0.8</th>\n",
        "      <th>precision</th>\n",
-       "      <td>0.205184</td>\n",
-       "      <td>0.273504</td>\n",
-       "      <td>0.225000</td>\n",
-       "      <td>0.213235</td>\n",
+       "      <td>0.214286</td>\n",
+       "      <td>0.237288</td>\n",
+       "      <td>0.274510</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>recall</th>\n",
-       "      <td>0.117429</td>\n",
-       "      <td>0.066253</td>\n",
-       "      <td>0.058315</td>\n",
-       "      <td>0.068075</td>\n",
+       "      <td>0.048860</td>\n",
+       "      <td>0.046053</td>\n",
+       "      <td>0.047138</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>f1</th>\n",
-       "      <td>0.149371</td>\n",
-       "      <td>0.106667</td>\n",
-       "      <td>0.092624</td>\n",
-       "      <td>0.103203</td>\n",
+       "      <td>0.079576</td>\n",
+       "      <td>0.077135</td>\n",
+       "      <td>0.080460</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>180 rows × 4 columns</p>\n",
+       "<p>120 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                             0         1         2         3\n",
-       "epinions fraudar 100.0 0.0 precision  0.016245  0.018277  0.021121  0.022312\n",
-       "                           recall     0.168558  0.168385  0.202952  0.235043\n",
-       "                           f1         0.029634  0.032974  0.038261  0.040756\n",
-       "                       0.2 precision  0.016245  0.018304  0.021121  0.022312\n",
-       "                           recall     0.165342  0.161716  0.194346  0.223577\n",
-       "...                                        ...       ...       ...       ...\n",
-       "         rev2    400.0 0.6 recall     0.124836  0.073563  0.065060  0.076720\n",
-       "                           f1         0.155229  0.115942  0.100935  0.112840\n",
-       "                       0.8 precision  0.205184  0.273504  0.225000  0.213235\n",
-       "                           recall     0.117429  0.066253  0.058315  0.068075\n",
-       "                           f1         0.149371  0.106667  0.092624  0.103203\n",
+       "                                     0         1         2         3\n",
+       "alpha sg 100.0 0.0 precision  0.177778  0.190476  0.187500  0.173913\n",
+       "                   recall     0.210526  0.197531  0.200000  0.173913\n",
+       "                   f1         0.192771  0.193939  0.193548  0.173913\n",
+       "               0.2 precision  0.179775  0.180723  0.187500  0.161765\n",
+       "                   recall     0.181818  0.161290  0.172414  0.135802\n",
+       "...                                ...       ...       ...       ...\n",
+       "otc   sg 400.0 0.6 recall     0.057915  0.054688  0.056225  0.000000\n",
+       "                   f1         0.091185  0.088889  0.093333  0.000000\n",
+       "               0.8 precision  0.214286  0.237288  0.274510  0.000000\n",
+       "                   recall     0.048860  0.046053  0.047138  0.000000\n",
+       "                   f1         0.079576  0.077135  0.080460  0.000000\n",
        "\n",
-       "[180 rows x 4 columns]"
+       "[120 rows x 4 columns]"
       ]
      },
      "metadata": {},
@@ -273,6 +275,8 @@
     "    \"fraudar\": 0.5,\n",
     "    \"rsd\": 1.2,\n",
     "    \"rev2\": 0.1,\n",
+    "    \"fbox\": 0.5,\n",
+    "    \"sg\": 0.5,\n",
     "}\n",
     "dict_met = {\n",
     "    (d, a, b, f): pd.DataFrame.from_dict(get_metrics(df_res=attack_res[(d, a, b, f)], splits=4, K=None, th=th_dict[a]))\n",
@@ -284,20 +288,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_alg_data_met(df_met, alg=\"rev2\", data=\"alpha\", met=\"f1\"):\n",
     "    df_met.index = df_met.index.set_names([\"data\", \"algo\", \"budget\", \"frac\", \"metrics\"])\n",
-    "    rdf = df_met.mean(axis=1).to_frame().reset_index().pivot(index=[\"data\", \"algo\", \"frac\", \"metrics\"], columns=[\"budget\"]).loc[(data, alg, slice(None), met)].droplevel(0, axis=1)#.droplevel([0, 1, 3], axis=0)\n",
+    "    rdf = df_met.mean(axis=1).to_frame().reset_index().pivot(index=[\"data\", \"algo\", \"frac\", \"metrics\"], columns=[\"budget\"]).loc[(data, alg, slice(None), met)].droplevel(0, axis=1).droplevel([0, 1, 3], axis=0)\n",
     "    rdf.index = [f\"baseline-{i}\" if i > 0 else \"no-attack\" for i in rdf.index]\n",
     "    return rdf"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -330,38 +334,38 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>no-attack</th>\n",
-       "      <td>0.035406</td>\n",
-       "      <td>0.035417</td>\n",
-       "      <td>0.035417</td>\n",
-       "      <td>0.035417</td>\n",
+       "      <td>0.181521</td>\n",
+       "      <td>0.181521</td>\n",
+       "      <td>0.181521</td>\n",
+       "      <td>0.181521</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>baseline-0.2</th>\n",
-       "      <td>0.035287</td>\n",
-       "      <td>0.035157</td>\n",
-       "      <td>0.035028</td>\n",
-       "      <td>0.034901</td>\n",
+       "      <td>0.182297</td>\n",
+       "      <td>0.181521</td>\n",
+       "      <td>0.181521</td>\n",
+       "      <td>0.181521</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>baseline-0.4</th>\n",
-       "      <td>0.035151</td>\n",
-       "      <td>0.034875</td>\n",
-       "      <td>0.034634</td>\n",
-       "      <td>0.034380</td>\n",
+       "      <td>0.182297</td>\n",
+       "      <td>0.181521</td>\n",
+       "      <td>0.182297</td>\n",
+       "      <td>0.181521</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>baseline-0.6</th>\n",
-       "      <td>0.035028</td>\n",
-       "      <td>0.034631</td>\n",
-       "      <td>0.034258</td>\n",
-       "      <td>0.033895</td>\n",
+       "      <td>0.178670</td>\n",
+       "      <td>0.181521</td>\n",
+       "      <td>0.181521</td>\n",
+       "      <td>0.181521</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>baseline-0.8</th>\n",
-       "      <td>0.034737</td>\n",
-       "      <td>0.034377</td>\n",
-       "      <td>0.033431</td>\n",
-       "      <td>0.032961</td>\n",
+       "      <td>0.175793</td>\n",
+       "      <td>0.175793</td>\n",
+       "      <td>0.182297</td>\n",
+       "      <td>0.181521</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -369,20 +373,20 @@
       ],
       "text/plain": [
        "budget           100.0     200.0     300.0     400.0\n",
-       "no-attack     0.035406  0.035417  0.035417  0.035417\n",
-       "baseline-0.2  0.035287  0.035157  0.035028  0.034901\n",
-       "baseline-0.4  0.035151  0.034875  0.034634  0.034380\n",
-       "baseline-0.6  0.035028  0.034631  0.034258  0.033895\n",
-       "baseline-0.8  0.034737  0.034377  0.033431  0.032961"
+       "no-attack     0.181521  0.181521  0.181521  0.181521\n",
+       "baseline-0.2  0.182297  0.181521  0.181521  0.181521\n",
+       "baseline-0.4  0.182297  0.181521  0.182297  0.181521\n",
+       "baseline-0.6  0.178670  0.181521  0.181521  0.181521\n",
+       "baseline-0.8  0.175793  0.175793  0.182297  0.181521"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "get_alg_data_met(df_met, alg=\"fraudar\", data=\"epinions\", met=\"f1\")"
+    "get_alg_data_met(df_met, alg=\"sg\", data=\"otc\", met=\"precision\")"
    ]
   }
  ],
