--- a/src/sockdef_large.ipynb
+++ b/src/sockdef_large.ipynb
@@ -32,11 +32,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "alg_list = [\"fraudar\", \"rsd\", \"rev2\"][:3]\n",
+    "alg_list = [\"fraudar\", \"rsd\", \"rev2\", \"sg\"][:]\n",
     "data_list = [\"alpha\", \"otc\", \"amazon\", \"epinions\"][2:3]\n",
     "budget_list = [1000.0, 2000.0, 3000.0, 4000.0]\n",
     "frac_list = [0.0, 0.2, 0.4, 0.6, 0.8]"
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
     "            for a in alg_list\n",
     "        }\n",
     "    # df = pd.DataFrame({sp: {u: scores[sp][u] for u in scores[sp] if u in data_gt_df[\"id\"].tolist()} for sp in scores})\n",
-    "    df = pd.DataFrame({(a, sp): {u: scores[sp][a][u] for u in scores[sp][a]} for a in alg_list for sp in scores})\n",
+    "    df = pd.DataFrame({(a, sp): {u: scores[sp][a][u] for u in scores[sp][a]} for a in alg_list for sp in scores if a in scores[sp]})\n",
     "    df.loc[[u[:5]==\"usock\" for u in df.index.tolist()], (slice(None), \"truth\")] = 1\n",
     "    df.loc[[u[:6]==\"udummy\" for u in df.index.tolist()], (slice(None), \"truth\")] = 1\n",
     "    return df"
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,6 +84,8 @@
     "        # df_res.loc[[u[:5]==\"usock\" for u in df_res.index.tolist()], \"truth\"] = 1\n",
     "        # df_res.loc[[u[:6]==\"udummy\" for u in df_res.index.tolist()], \"truth\"] = 1\n",
     "        for a in alg_list:\n",
+    "            if (a, sp) not in df_res.columns:\n",
+    "                continue\n",
     "            df = df_res[[(a, sp), (a, \"truth\")]].dropna()\n",
     "            t = df[(a, \"truth\")].sum() if K is None else K\n",
     "            t_frac = t / df.shape[0]\n",
@@ -101,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -112,10 +114,11 @@
       "../res/sockfarm_large_single/fraudar-amazon/2000.0.pkl\n",
       "../res/sockfarm_large_single/fraudar-amazon/3000.0.pkl\n",
       "../res/sockfarm_large_single/fraudar-amazon/4000.0.pkl\n",
-      "../res/sockfarm_large_single/rev2-amazon/1000.0.pkl\n",
-      "../res/sockfarm_large_single/rev2-amazon/2000.0.pkl\n",
-      "../res/sockfarm_large_single/rev2-amazon/3000.0.pkl\n",
-      "../res/sockfarm_large_single/rev2-amazon/4000.0.pkl\n"
+      "../res/sockfarm_large_single/rev2-amazon/4000.0.pkl\n",
+      "../res/sockfarm_large_single/sg-amazon/1000.0.pkl\n",
+      "../res/sockfarm_large_single/sg-amazon/2000.0.pkl\n",
+      "../res/sockfarm_large_single/sg-amazon/3000.0.pkl\n",
+      "../res/sockfarm_large_single/sg-amazon/4000.0.pkl\n"
      ]
     }
    ],
@@ -138,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -196,6 +199,21 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <th>sockfarm-rev2</th>\n",
+       "      <td>0.116171</td>\n",
+       "      <td>0.101918</td>\n",
+       "      <td>0.090893</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.226788</td>\n",
+       "      <td>0.192593</td>\n",
+       "      <td>0.168153</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.354998</td>\n",
+       "      <td>0.284123</td>\n",
+       "      <td>0.239224</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>sockfarm-rsd</th>\n",
        "      <td>0.116171</td>\n",
        "      <td>0.101918</td>\n",
@@ -205,23 +223,25 @@
        "      <td>0.183221</td>\n",
        "      <td>0.159024</td>\n",
        "      <td>0.140889</td>\n",
-       "      <td>0.246209</td>\n",
-       "      <td>0.219631</td>\n",
-       "      <td>0.198869</td>\n",
-       "      <td>0.182055</td>\n",
+       "      <td>0.356348</td>\n",
+       "      <td>0.285915</td>\n",
+       "      <td>0.238717</td>\n",
+       "      <td>0.206786</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "               fraudar                                     rsd            \\\n",
-       "budget          1000.0    2000.0    3000.0    4000.0    1000.0    2000.0   \n",
-       "sockfarm-rsd  0.116171  0.101918  0.090893  0.082084  0.217931  0.183221   \n",
+       "                fraudar                                     rsd            \\\n",
+       "budget           1000.0    2000.0    3000.0    4000.0    1000.0    2000.0   \n",
+       "sockfarm-rev2  0.116171  0.101918  0.090893       NaN  0.226788  0.192593   \n",
+       "sockfarm-rsd   0.116171  0.101918  0.090893  0.082084  0.217931  0.183221   \n",
        "\n",
-       "                                      rev2                                \n",
-       "budget          3000.0    4000.0    1000.0    2000.0    3000.0    4000.0  \n",
-       "sockfarm-rsd  0.159024  0.140889  0.246209  0.219631  0.198869  0.182055  "
+       "                                       rev2                                \n",
+       "budget           3000.0    4000.0    1000.0    2000.0    3000.0    4000.0  \n",
+       "sockfarm-rev2  0.168153       NaN  0.354998  0.284123  0.239224       NaN  \n",
+       "sockfarm-rsd   0.159024  0.140889  0.356348  0.285915  0.238717  0.206786  "
       ]
      },
      "metadata": {},
@@ -269,6 +289,21 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>sockfarm-rev2</th>\n",
+       "      <td>0.182902</td>\n",
+       "      <td>0.127632</td>\n",
+       "      <td>0.098399</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.279025</td>\n",
+       "      <td>0.199064</td>\n",
+       "      <td>0.155147</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.322532</td>\n",
+       "      <td>0.227240</td>\n",
+       "      <td>0.176593</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
        "    <tr>\n",
        "      <th>sockfarm-rsd</th>\n",
        "      <td>0.182902</td>\n",
@@ -279,23 +314,25 @@
        "      <td>0.184464</td>\n",
        "      <td>0.143782</td>\n",
        "      <td>0.117909</td>\n",
-       "      <td>0.482004</td>\n",
-       "      <td>0.33957</td>\n",
-       "      <td>0.263014</td>\n",
-       "      <td>0.214871</td>\n",
+       "      <td>0.321528</td>\n",
+       "      <td>0.227347</td>\n",
+       "      <td>0.175513</td>\n",
+       "      <td>0.143851</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "               fraudar                                     rsd            \\\n",
-       "budget          1000.0    2000.0    3000.0    4000.0    1000.0    2000.0   \n",
-       "sockfarm-rsd  0.182902  0.127632  0.098399  0.080167  0.258497  0.184464   \n",
+       "                fraudar                                     rsd            \\\n",
+       "budget           1000.0    2000.0    3000.0    4000.0    1000.0    2000.0   \n",
+       "sockfarm-rev2  0.182902  0.127632  0.098399       NaN  0.279025  0.199064   \n",
+       "sockfarm-rsd   0.182902  0.127632  0.098399  0.080167  0.258497  0.184464   \n",
        "\n",
-       "                                      rev2                               \n",
-       "budget          3000.0    4000.0    1000.0   2000.0    3000.0    4000.0  \n",
-       "sockfarm-rsd  0.143782  0.117909  0.482004  0.33957  0.263014  0.214871  "
+       "                                       rev2                                \n",
+       "budget           3000.0    4000.0    1000.0    2000.0    3000.0    4000.0  \n",
+       "sockfarm-rev2  0.155147       NaN  0.322532  0.227240  0.176593       NaN  \n",
+       "sockfarm-rsd   0.143782  0.117909  0.321528  0.227347  0.175513  0.143851  "
       ]
      },
      "metadata": {},
@@ -344,6 +381,21 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <th>sockfarm-rev2</th>\n",
+       "      <td>0.085197</td>\n",
+       "      <td>0.085197</td>\n",
+       "      <td>0.085197</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.198766</td>\n",
+       "      <td>0.198766</td>\n",
+       "      <td>0.199044</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.426312</td>\n",
+       "      <td>0.426312</td>\n",
+       "      <td>0.427713</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>sockfarm-rsd</th>\n",
        "      <td>0.085197</td>\n",
        "      <td>0.085197</td>\n",
@@ -353,23 +405,25 @@
        "      <td>0.203497</td>\n",
        "      <td>0.203497</td>\n",
        "      <td>0.203497</td>\n",
-       "      <td>0.168598</td>\n",
-       "      <td>0.168598</td>\n",
-       "      <td>0.168598</td>\n",
-       "      <td>0.168598</td>\n",
+       "      <td>0.432099</td>\n",
+       "      <td>0.433500</td>\n",
+       "      <td>0.432099</td>\n",
+       "      <td>0.4335</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "               fraudar                                     rsd            \\\n",
-       "budget          1000.0    2000.0    3000.0    4000.0    1000.0    2000.0   \n",
-       "sockfarm-rsd  0.085197  0.085197  0.085197  0.085197  0.203497  0.203497   \n",
+       "                fraudar                                     rsd            \\\n",
+       "budget           1000.0    2000.0    3000.0    4000.0    1000.0    2000.0   \n",
+       "sockfarm-rev2  0.085197  0.085197  0.085197       NaN  0.198766  0.198766   \n",
+       "sockfarm-rsd   0.085197  0.085197  0.085197  0.085197  0.203497  0.203497   \n",
        "\n",
-       "                                      rev2                                \n",
-       "budget          3000.0    4000.0    1000.0    2000.0    3000.0    4000.0  \n",
-       "sockfarm-rsd  0.203497  0.203497  0.168598  0.168598  0.168598  0.168598  "
+       "                                       rev2                              \n",
+       "budget           3000.0    4000.0    1000.0    2000.0    3000.0  4000.0  \n",
+       "sockfarm-rev2  0.199044       NaN  0.426312  0.426312  0.427713     NaN  \n",
+       "sockfarm-rsd   0.203497  0.203497  0.432099  0.433500  0.432099  0.4335  "
       ]
      },
      "metadata": {},
@@ -378,9 +432,10 @@
    ],
    "source": [
     "def_dict = {\n",
-    "    \"fraudar\": {\"fraudar\": 0.9, \"rsd\": 1.96, \"rev2\": 0.00,}, # rev2=0.026\n",
-    "    \"rsd\": {\"fraudar\": 0.5, \"rsd\": 0.6, \"rev2\": 0.026,},\n",
-    "    \"rev2\": {\"fraudar\": 0.9, \"rsd\": 1.92, \"rev2\": 0.5,},\n",
+    "    \"fraudar\": {\"fraudar\": 0.9, \"rsd\": 1.96, \"rev2\": 0.00, \"sg\": 0.5}, # rev2=0.026\n",
+    "    \"rsd\": {\"fraudar\": 0.5, \"rsd\": 0.6, \"rev2\": 0.09, \"sg\": 0.5},\n",
+    "    \"rev2\": {\"fraudar\": 0.5, \"rsd\": 1.01, \"rev2\": 0.4, \"sg\": 0.5},\n",
+    "    \"sg\": {\"fraudar\": 0.9, \"rsd\": 1.4, \"rev2\": 0.15, \"sg\": 0.5},\n",
     "}\n",
     "\n",
     "\n",
