--- a/src/ilp_large.ipynb
+++ b/src/ilp_large.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,24 +84,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "alg_list = [\"fraudar\", \"rsd\", \"rev2\", \"fbox\", \"sg\"][4:]\n",
-    "data_list = [\"alpha\", \"otc\", \"amazon\", \"epinions\"][:2]\n",
-    "budget_list = [100.0, 200.0, 300.0, 400.0]\n",
+    "alg_list = [\"fraudar\", \"rsd\", \"rev2\", \"sg\", \"fbox\"][:4]\n",
+    "data_list = [\"alpha\", \"otc\", \"amazon\", \"epinions\"][2:3]\n",
+    "budget_list = [1000.0, 2000.0, 3000.0, 4000.0]\n",
     "frac_list = [0.0, 0.2, 0.4, 0.6, 0.8]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "../res/ilp_large/rev2-amazon/4000.0-0.2.pkl\n",
+      "../res/ilp_large/rev2-amazon/4000.0-0.4.pkl\n",
+      "../res/ilp_large/rev2-amazon/4000.0-0.6.pkl\n",
+      "../res/ilp_large/rev2-amazon/4000.0-0.8.pkl\n"
+     ]
+    }
+   ],
    "source": [
     "attack_res = {\n",
-    "    (d, a, b, f): get_results(data_name=d, alg=a, attack_name=\"ilp_attack\", budget=b, frac=f)\n",
+    "    (d, a, b, f): get_results(data_name=d, alg=a, attack_name=\"ilp_large\", budget=b, frac=f)\n",
     "    for d in data_list for a in alg_list\n",
     "    for b in budget_list for f in frac_list\n",
     "}"
@@ -118,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -154,116 +165,114 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th rowspan=\"5\" valign=\"top\">alpha</th>\n",
-       "      <th rowspan=\"5\" valign=\"top\">sg</th>\n",
-       "      <th rowspan=\"5\" valign=\"top\">100.0</th>\n",
+       "      <th rowspan=\"11\" valign=\"top\">amazon</th>\n",
+       "      <th rowspan=\"5\" valign=\"top\">fraudar</th>\n",
+       "      <th rowspan=\"5\" valign=\"top\">1000.0</th>\n",
        "      <th rowspan=\"3\" valign=\"top\">0.0</th>\n",
        "      <th>precision</th>\n",
-       "      <td>0.177778</td>\n",
-       "      <td>0.190476</td>\n",
-       "      <td>0.187500</td>\n",
-       "      <td>0.173913</td>\n",
+       "      <td>0.081395</td>\n",
+       "      <td>0.076923</td>\n",
+       "      <td>0.093702</td>\n",
+       "      <td>0.090909</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>recall</th>\n",
-       "      <td>0.210526</td>\n",
-       "      <td>0.197531</td>\n",
-       "      <td>0.200000</td>\n",
-       "      <td>0.173913</td>\n",
+       "      <td>0.443038</td>\n",
+       "      <td>0.302326</td>\n",
+       "      <td>0.309645</td>\n",
+       "      <td>0.317992</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>f1</th>\n",
-       "      <td>0.192771</td>\n",
-       "      <td>0.193939</td>\n",
-       "      <td>0.193548</td>\n",
-       "      <td>0.173913</td>\n",
+       "      <td>0.137525</td>\n",
+       "      <td>0.122642</td>\n",
+       "      <td>0.143868</td>\n",
+       "      <td>0.141395</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th rowspan=\"2\" valign=\"top\">0.2</th>\n",
        "      <th>precision</th>\n",
-       "      <td>0.179775</td>\n",
-       "      <td>0.180723</td>\n",
-       "      <td>0.187500</td>\n",
-       "      <td>0.161765</td>\n",
+       "      <td>0.081395</td>\n",
+       "      <td>0.076923</td>\n",
+       "      <td>0.093702</td>\n",
+       "      <td>0.090909</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>recall</th>\n",
-       "      <td>0.181818</td>\n",
-       "      <td>0.161290</td>\n",
-       "      <td>0.172414</td>\n",
-       "      <td>0.135802</td>\n",
+       "      <td>0.372340</td>\n",
+       "      <td>0.270833</td>\n",
+       "      <td>0.287736</td>\n",
+       "      <td>0.299213</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
        "      <th>...</th>\n",
        "      <th>...</th>\n",
        "      <th>...</th>\n",
-       "      <th>...</th>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th rowspan=\"5\" valign=\"top\">otc</th>\n",
        "      <th rowspan=\"5\" valign=\"top\">sg</th>\n",
-       "      <th rowspan=\"5\" valign=\"top\">400.0</th>\n",
+       "      <th rowspan=\"5\" valign=\"top\">4000.0</th>\n",
        "      <th rowspan=\"2\" valign=\"top\">0.6</th>\n",
        "      <th>recall</th>\n",
-       "      <td>0.057915</td>\n",
-       "      <td>0.054688</td>\n",
-       "      <td>0.056225</td>\n",
+       "      <td>0.019305</td>\n",
+       "      <td>0.022654</td>\n",
+       "      <td>0.021220</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>f1</th>\n",
-       "      <td>0.091185</td>\n",
-       "      <td>0.088889</td>\n",
-       "      <td>0.093333</td>\n",
+       "      <td>0.036496</td>\n",
+       "      <td>0.041916</td>\n",
+       "      <td>0.038278</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th rowspan=\"3\" valign=\"top\">0.8</th>\n",
        "      <th>precision</th>\n",
-       "      <td>0.214286</td>\n",
-       "      <td>0.237288</td>\n",
-       "      <td>0.274510</td>\n",
+       "      <td>0.333333</td>\n",
+       "      <td>0.280000</td>\n",
+       "      <td>0.195122</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>recall</th>\n",
-       "      <td>0.048860</td>\n",
-       "      <td>0.046053</td>\n",
-       "      <td>0.047138</td>\n",
+       "      <td>0.015674</td>\n",
+       "      <td>0.018970</td>\n",
+       "      <td>0.018307</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>f1</th>\n",
-       "      <td>0.079576</td>\n",
-       "      <td>0.077135</td>\n",
-       "      <td>0.080460</td>\n",
+       "      <td>0.029940</td>\n",
+       "      <td>0.035533</td>\n",
+       "      <td>0.033473</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>120 rows × 4 columns</p>\n",
+       "<p>228 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                     0         1         2         3\n",
-       "alpha sg 100.0 0.0 precision  0.177778  0.190476  0.187500  0.173913\n",
-       "                   recall     0.210526  0.197531  0.200000  0.173913\n",
-       "                   f1         0.192771  0.193939  0.193548  0.173913\n",
-       "               0.2 precision  0.179775  0.180723  0.187500  0.161765\n",
-       "                   recall     0.181818  0.161290  0.172414  0.135802\n",
-       "...                                ...       ...       ...       ...\n",
-       "otc   sg 400.0 0.6 recall     0.057915  0.054688  0.056225  0.000000\n",
-       "                   f1         0.091185  0.088889  0.093333  0.000000\n",
-       "               0.8 precision  0.214286  0.237288  0.274510  0.000000\n",
-       "                   recall     0.048860  0.046053  0.047138  0.000000\n",
-       "                   f1         0.079576  0.077135  0.080460  0.000000\n",
+       "                                            0         1         2         3\n",
+       "amazon fraudar 1000.0 0.0 precision  0.081395  0.076923  0.093702  0.090909\n",
+       "                          recall     0.443038  0.302326  0.309645  0.317992\n",
+       "                          f1         0.137525  0.122642  0.143868  0.141395\n",
+       "                      0.2 precision  0.081395  0.076923  0.093702  0.090909\n",
+       "                          recall     0.372340  0.270833  0.287736  0.299213\n",
+       "...                                       ...       ...       ...       ...\n",
+       "       sg      4000.0 0.6 recall     0.019305  0.022654  0.021220  0.000000\n",
+       "                          f1         0.036496  0.041916  0.038278  0.000000\n",
+       "                      0.8 precision  0.333333  0.280000  0.195122  0.000000\n",
+       "                          recall     0.015674  0.018970  0.018307  0.000000\n",
+       "                          f1         0.029940  0.035533  0.033473  0.000000\n",
        "\n",
-       "[120 rows x 4 columns]"
+       "[228 rows x 4 columns]"
       ]
      },
      "metadata": {},
@@ -273,7 +282,7 @@
    "source": [
     "th_dict = {\n",
     "    \"fraudar\": 0.5,\n",
-    "    \"rsd\": 1.2,\n",
+    "    \"rsd\": 1.97,\n",
     "    \"rev2\": 0.1,\n",
     "    \"fbox\": 0.5,\n",
     "    \"sg\": 0.5,\n",
@@ -288,20 +297,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_alg_data_met(df_met, alg=\"rev2\", data=\"alpha\", met=\"f1\"):\n",
     "    df_met.index = df_met.index.set_names([\"data\", \"algo\", \"budget\", \"frac\", \"metrics\"])\n",
-    "    rdf = df_met.mean(axis=1).to_frame().reset_index().pivot(index=[\"data\", \"algo\", \"frac\", \"metrics\"], columns=[\"budget\"]).loc[(data, alg, slice(None), met)].droplevel(0, axis=1).droplevel([0, 1, 3], axis=0)\n",
+    "    rdf = df_met.mean(axis=1).to_frame().reset_index().pivot(index=[\"data\", \"algo\", \"frac\", \"metrics\"], columns=[\"budget\"]).loc[(data, alg, slice(None), met)]#.droplevel(0, axis=1).droplevel([0, 1, 3], axis=0)\n",
     "    rdf.index = [f\"baseline-{i}\" if i > 0 else \"no-attack\" for i in rdf.index]\n",
     "    return rdf"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -317,76 +326,81 @@
        "        vertical-align: top;\n",
        "    }\n",
        "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th colspan=\"4\" halign=\"left\">0</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>budget</th>\n",
-       "      <th>100.0</th>\n",
-       "      <th>200.0</th>\n",
-       "      <th>300.0</th>\n",
-       "      <th>400.0</th>\n",
+       "      <th>1000.0</th>\n",
+       "      <th>2000.0</th>\n",
+       "      <th>3000.0</th>\n",
+       "      <th>4000.0</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>no-attack</th>\n",
-       "      <td>0.181521</td>\n",
-       "      <td>0.181521</td>\n",
-       "      <td>0.181521</td>\n",
-       "      <td>0.181521</td>\n",
+       "      <td>0.287317</td>\n",
+       "      <td>0.275116</td>\n",
+       "      <td>0.275116</td>\n",
+       "      <td>0.275116</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>baseline-0.2</th>\n",
-       "      <td>0.182297</td>\n",
-       "      <td>0.181521</td>\n",
-       "      <td>0.181521</td>\n",
-       "      <td>0.181521</td>\n",
+       "      <td>0.282357</td>\n",
+       "      <td>0.264919</td>\n",
+       "      <td>0.275116</td>\n",
+       "      <td>0.275116</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>baseline-0.4</th>\n",
-       "      <td>0.182297</td>\n",
-       "      <td>0.181521</td>\n",
-       "      <td>0.182297</td>\n",
-       "      <td>0.181521</td>\n",
+       "      <td>0.282357</td>\n",
+       "      <td>0.277105</td>\n",
+       "      <td>0.277105</td>\n",
+       "      <td>0.275116</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>baseline-0.6</th>\n",
-       "      <td>0.178670</td>\n",
-       "      <td>0.181521</td>\n",
-       "      <td>0.181521</td>\n",
-       "      <td>0.181521</td>\n",
+       "      <td>0.282357</td>\n",
+       "      <td>0.282357</td>\n",
+       "      <td>0.277105</td>\n",
+       "      <td>0.277105</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>baseline-0.8</th>\n",
-       "      <td>0.175793</td>\n",
-       "      <td>0.175793</td>\n",
-       "      <td>0.182297</td>\n",
-       "      <td>0.181521</td>\n",
+       "      <td>0.282357</td>\n",
+       "      <td>0.287317</td>\n",
+       "      <td>0.276408</td>\n",
+       "      <td>0.281979</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "budget           100.0     200.0     300.0     400.0\n",
-       "no-attack     0.181521  0.181521  0.181521  0.181521\n",
-       "baseline-0.2  0.182297  0.181521  0.181521  0.181521\n",
-       "baseline-0.4  0.182297  0.181521  0.182297  0.181521\n",
-       "baseline-0.6  0.178670  0.181521  0.181521  0.181521\n",
-       "baseline-0.8  0.175793  0.175793  0.182297  0.181521"
+       "                     0                              \n",
+       "budget          1000.0    2000.0    3000.0    4000.0\n",
+       "no-attack     0.287317  0.275116  0.275116  0.275116\n",
+       "baseline-0.2  0.282357  0.264919  0.275116  0.275116\n",
+       "baseline-0.4  0.282357  0.277105  0.277105  0.275116\n",
+       "baseline-0.6  0.282357  0.282357  0.277105  0.277105\n",
+       "baseline-0.8  0.282357  0.287317  0.276408  0.281979"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "get_alg_data_met(df_met, alg=\"sg\", data=\"otc\", met=\"precision\")"
+    "get_alg_data_met(df_met, alg=\"rsd\", data=\"amazon\", met=\"precision\")"
    ]
   }
  ],
