--- a/src/sockdef_large.ipynb
+++ b/src/sockdef_large.ipynb
@@ -103,16 +103,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "../res/sockfarm_large_single/fraudar-amazon/1000.0.pkl\n",
-      "../res/sockfarm_large_single/fraudar-amazon/2000.0.pkl\n",
-      "../res/sockfarm_large_single/fraudar-amazon/3000.0.pkl\n",
       "../res/sockfarm_large_single/fraudar-amazon/4000.0.pkl\n",
       "../res/sockfarm_large_single/rev2-amazon/4000.0.pkl\n",
       "../res/sockfarm_large_single/sg-amazon/1000.0.pkl\n",
@@ -132,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -198,6 +195,21 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>sockfarm-fraudar</th>\n",
+       "      <td>0.116171</td>\n",
+       "      <td>0.101918</td>\n",
+       "      <td>0.090893</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.205537</td>\n",
+       "      <td>0.163793</td>\n",
+       "      <td>0.136887</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.130392</td>\n",
+       "      <td>0.096631</td>\n",
+       "      <td>0.077094</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
        "    <tr>\n",
        "      <th>sockfarm-rev2</th>\n",
        "      <td>0.116171</td>\n",
@@ -233,15 +245,17 @@
        "</div>"
       ],
       "text/plain": [
-       "                fraudar                                     rsd            \\\n",
-       "budget           1000.0    2000.0    3000.0    4000.0    1000.0    2000.0   \n",
-       "sockfarm-rev2  0.116171  0.101918  0.090893       NaN  0.226788  0.192593   \n",
-       "sockfarm-rsd   0.116171  0.101918  0.090893  0.082084  0.217931  0.183221   \n",
+       "                   fraudar                                     rsd            \\\n",
+       "budget              1000.0    2000.0    3000.0    4000.0    1000.0    2000.0   \n",
+       "sockfarm-fraudar  0.116171  0.101918  0.090893       NaN  0.205537  0.163793   \n",
+       "sockfarm-rev2     0.116171  0.101918  0.090893       NaN  0.226788  0.192593   \n",
+       "sockfarm-rsd      0.116171  0.101918  0.090893  0.082084  0.217931  0.183221   \n",
        "\n",
-       "                                       rev2                                \n",
-       "budget           3000.0    4000.0    1000.0    2000.0    3000.0    4000.0  \n",
-       "sockfarm-rev2  0.168153       NaN  0.354998  0.284123  0.239224       NaN  \n",
-       "sockfarm-rsd   0.159024  0.140889  0.356348  0.285915  0.238717  0.206786  "
+       "                                          rev2                                \n",
+       "budget              3000.0    4000.0    1000.0    2000.0    3000.0    4000.0  \n",
+       "sockfarm-fraudar  0.136887       NaN  0.130392  0.096631  0.077094       NaN  \n",
+       "sockfarm-rev2     0.168153       NaN  0.354998  0.284123  0.239224       NaN  \n",
+       "sockfarm-rsd      0.159024  0.140889  0.356348  0.285915  0.238717  0.206786  "
       ]
      },
      "metadata": {},
@@ -289,6 +303,21 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>sockfarm-fraudar</th>\n",
+       "      <td>0.182902</td>\n",
+       "      <td>0.127632</td>\n",
+       "      <td>0.098399</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.168548</td>\n",
+       "      <td>0.120878</td>\n",
+       "      <td>0.094463</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.077444</td>\n",
+       "      <td>0.055049</td>\n",
+       "      <td>0.042832</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
        "    <tr>\n",
        "      <th>sockfarm-rev2</th>\n",
        "      <td>0.182902</td>\n",
@@ -324,15 +353,17 @@
        "</div>"
       ],
       "text/plain": [
-       "                fraudar                                     rsd            \\\n",
-       "budget           1000.0    2000.0    3000.0    4000.0    1000.0    2000.0   \n",
-       "sockfarm-rev2  0.182902  0.127632  0.098399       NaN  0.279025  0.199064   \n",
-       "sockfarm-rsd   0.182902  0.127632  0.098399  0.080167  0.258497  0.184464   \n",
+       "                   fraudar                                     rsd            \\\n",
+       "budget              1000.0    2000.0    3000.0    4000.0    1000.0    2000.0   \n",
+       "sockfarm-fraudar  0.182902  0.127632  0.098399       NaN  0.168548  0.120878   \n",
+       "sockfarm-rev2     0.182902  0.127632  0.098399       NaN  0.279025  0.199064   \n",
+       "sockfarm-rsd      0.182902  0.127632  0.098399  0.080167  0.258497  0.184464   \n",
        "\n",
-       "                                       rev2                                \n",
-       "budget           3000.0    4000.0    1000.0    2000.0    3000.0    4000.0  \n",
-       "sockfarm-rev2  0.155147       NaN  0.322532  0.227240  0.176593       NaN  \n",
-       "sockfarm-rsd   0.143782  0.117909  0.321528  0.227347  0.175513  0.143851  "
+       "                                          rev2                                \n",
+       "budget              3000.0    4000.0    1000.0    2000.0    3000.0    4000.0  \n",
+       "sockfarm-fraudar  0.094463       NaN  0.077444  0.055049  0.042832       NaN  \n",
+       "sockfarm-rev2     0.155147       NaN  0.322532  0.227240  0.176593       NaN  \n",
+       "sockfarm-rsd      0.143782  0.117909  0.321528  0.227347  0.175513  0.143851  "
       ]
      },
      "metadata": {},
@@ -381,6 +412,21 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <th>sockfarm-fraudar</th>\n",
+       "      <td>0.085197</td>\n",
+       "      <td>0.085197</td>\n",
+       "      <td>0.085197</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.298607</td>\n",
+       "      <td>0.298607</td>\n",
+       "      <td>0.298607</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.465281</td>\n",
+       "      <td>0.465281</td>\n",
+       "      <td>0.465281</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>sockfarm-rev2</th>\n",
        "      <td>0.085197</td>\n",
        "      <td>0.085197</td>\n",
@@ -415,15 +461,17 @@
        "</div>"
       ],
       "text/plain": [
-       "                fraudar                                     rsd            \\\n",
-       "budget           1000.0    2000.0    3000.0    4000.0    1000.0    2000.0   \n",
-       "sockfarm-rev2  0.085197  0.085197  0.085197       NaN  0.198766  0.198766   \n",
-       "sockfarm-rsd   0.085197  0.085197  0.085197  0.085197  0.203497  0.203497   \n",
+       "                   fraudar                                     rsd            \\\n",
+       "budget              1000.0    2000.0    3000.0    4000.0    1000.0    2000.0   \n",
+       "sockfarm-fraudar  0.085197  0.085197  0.085197       NaN  0.298607  0.298607   \n",
+       "sockfarm-rev2     0.085197  0.085197  0.085197       NaN  0.198766  0.198766   \n",
+       "sockfarm-rsd      0.085197  0.085197  0.085197  0.085197  0.203497  0.203497   \n",
        "\n",
-       "                                       rev2                              \n",
-       "budget           3000.0    4000.0    1000.0    2000.0    3000.0  4000.0  \n",
-       "sockfarm-rev2  0.199044       NaN  0.426312  0.426312  0.427713     NaN  \n",
-       "sockfarm-rsd   0.203497  0.203497  0.432099  0.433500  0.432099  0.4335  "
+       "                                          rev2                              \n",
+       "budget              3000.0    4000.0    1000.0    2000.0    3000.0  4000.0  \n",
+       "sockfarm-fraudar  0.298607       NaN  0.465281  0.465281  0.465281     NaN  \n",
+       "sockfarm-rev2     0.199044       NaN  0.426312  0.426312  0.427713     NaN  \n",
+       "sockfarm-rsd      0.203497  0.203497  0.432099  0.433500  0.432099  0.4335  "
       ]
      },
      "metadata": {},
@@ -432,7 +480,7 @@
    ],
    "source": [
     "def_dict = {\n",
-    "    \"fraudar\": {\"fraudar\": 0.9, \"rsd\": 1.96, \"rev2\": 0.00, \"sg\": 0.5}, # rev2=0.026\n",
+    "    \"fraudar\": {\"fraudar\": 0.9, \"rsd\": 1.96, \"rev2\": 0.163, \"sg\": 0.5}, # rev2=0.026\n",
     "    \"rsd\": {\"fraudar\": 0.5, \"rsd\": 0.6, \"rev2\": 0.09, \"sg\": 0.5},\n",
     "    \"rev2\": {\"fraudar\": 0.5, \"rsd\": 1.01, \"rev2\": 0.4, \"sg\": 0.5},\n",
     "    \"sg\": {\"fraudar\": 0.9, \"rsd\": 1.4, \"rev2\": 0.15, \"sg\": 0.5},\n",
